# Workspacer

./: .gitignore  .nvimlog  Cargo.toml  README.md  workspaces.txt
src/: abc.txt  commands.rs  configuration.rs  errors.rs  lib.rs  main.rs  shell.rs  tests.rs  workspaces.rs
src/commands/: command_dict.rs  mod.rs
src/workspaces/: mod.rs
workspaces/: workspaces.txt
