[package]
name = "workspace_mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
directories = "5.0.0"
serde = {version = "1.0.159", features = ["derive"]}
shells = "0.2.0"
text_io = "0.1.12"
toml = "0.7.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
